--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 header, footer {
-    max-width: 749px;
+    max-width: 960px;
     height: 82px;
     margin: 0 auto;
     text-align: center;
@@ -21,14 +21,14 @@ header, footer {
     background-color: #333;
 }
 
-nav {
+/* nav {
     color: #888;
     background-color: salmon;
     font-size: 16px;
     padding: 10px;
     position: absolute;
     right: 0;
-}
+} */
 
 form {
     color: #eee;
@@ -61,13 +61,13 @@ h2 {
 
 .container {
     width: 100%;
-    height: 82px;
-    background-color: #333;
-    position: relative;
+    /* height: 82px; */
+    background-color: salmon;
+    /* position: relative; */
 }
 
 .content {
-    max-width: 749px;
+    max-width: 960px;
     background-color: #333;
     color: #eee;
     padding: 20px;
